@@ -1,4 +1,4 @@
-function [ndlim, len, outl] = count_dlim(ins, dlim)
+function [ndlim, len, outl] = count_dlim(ins, dlim, cmnt_str)
 % COUNT_DLIM Returns the numbers of delimiters in input, line-by-line
 %
 % 3DFM function
@@ -6,6 +6,10 @@ function [ndlim, len, outl] = count_dlim(ins, dlim)
 % last modified 2008.11.14 (jcribb)
 %
 % count the number of delimiters (or other characters) found line-by-line in a text file
+
+if nargin < 3
+    cmnt_str = [];
+end
 
 if ~isempty(dir(ins))
     fid=fopen(ins);
@@ -19,9 +23,20 @@ count = 1;
 while 1
     tline = fgetl(fid);
     
-    if ~ischar(tline), 
-        break,   
+    if ~ischar(tline)
+        break
     else
+        
+        % cut any parts of the string that follow "comment" character(s)
+        if ~isempty(cmnt_str)
+            eol = strfind(tline, cmnt_str);    
+            if ~isempty(eol)
+                tline = tline(1:eol-1);    
+            end
+            
+            tline = strtrim(tline);
+        end
+        
         q = regexp(tline, dlim);
         ndlim(count,1) = length(q);
         len(count,1) = length(tline);
