@@ -1,3 +1,7 @@
+2011-07-01 Jeremy Cribb <jcribb@email.unc.edu>
+	* count_dlim.m: now accepts a "comment identifying" string, which tells it to ignore the remainder of the line.
+	* gen_pub_plotfiles.m:  handles an error when an incorrect figure handle is used.
+
 2011-01-13  Jeremy Cribb <jcribb@email.unc.edu>
 	* gen_pub_plotfiles.m: updated calls for saving output files.
 	* pretty_plot.m: commented out reported text for unknown condition.
